Fix link to policies page in about.html

--- a/hair-for-you-website/about.html
+++ b/hair-for-you-website/about.html
@@ -15,7 +15,7 @@
         <li><a href="shop.html">Shop</a></li>
         <li><a class="active" href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="policies.html">Policies</a></li>
+        <li><a href="policy.html">Policies</a></li>
         <li><a href="cart.html">Cart (<span id="cart-count">0</span>)</a></li>
       </ul>
     </nav>
@@ -41,3 +41,4 @@
   
 </body>
 </html>
+
