--- a/hair-for-you-website/cart.html
+++ b/hair-for-you-website/cart.html
@@ -16,7 +16,7 @@
         <li><a href="shop.html">Shop</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="policies.html">Policies</a></li>
+        <li><a href="policy.html">Policies</a></li>
         <li><a class="active" href="cart.html">Cart</a></li>
       </ul>
     </nav>
@@ -83,4 +83,5 @@
   <script src="script.js"></script>
   
 </body>
+
 </html>
